--- a/customBulletColor.css
+++ b/customBulletColor.css
@@ -114,7 +114,7 @@ html[data-theme="light"]  [data-refs-self*="拖延症"]>.block-main-container .b
 html[data-theme="light"]  [data-refs-self*="性幻想"]>.block-main-container .bullet-container .bullet,
 html[data-theme="light"]  [data-refs-self*="性成瘾"]>.block-main-container .bullet-container .bullet,
 html[data-theme="light"]  [data-refs-self*="性欲望"]>.block-main-container .bullet-container .bullet,
-html[data-theme="light"]  [data-refs-self*="Masturbation"]>.block-main-container .bullet-container .bullet,
+html[data-theme="light"]  [data-refs-self*="masturbation"]>.block-main-container .bullet-container .bullet,
 html[data-theme="light"]  [data-refs-self*="贪"]>.block-main-container .bullet-container .bullet,
 html[data-theme="light"]  [data-refs-self*="痴"]>.block-main-container .bullet-container .bullet,
 html[data-theme="light"]  [data-refs-self*="恼"]>.block-main-container .bullet-container .bullet,
@@ -269,7 +269,7 @@ html[data-theme="dark"]  [data-refs-self*="拖延症"]>.block-main-container .bu
 html[data-theme="dark"]  [data-refs-self*="性幻想"]>.block-main-container .bullet-container .bullet,
 html[data-theme="dark"]  [data-refs-self*="性成瘾"]>.block-main-container .bullet-container .bullet,
 html[data-theme="dark"]  [data-refs-self*="性欲望"]>.block-main-container .bullet-container .bullet,
-html[data-theme="dark"]  [data-refs-self*="Masturbation"]>.block-main-container .bullet-container .bullet,
+html[data-theme="dark"]  [data-refs-self*="masturbation"]>.block-main-container .bullet-container .bullet,
 html[data-theme="dark"]  [data-refs-self*="贪"]>.block-main-container .bullet-container .bullet,
 html[data-theme="dark"]  [data-refs-self*="痴"]>.block-main-container .bullet-container .bullet,
 html[data-theme="dark"]  [data-refs-self*="恼"]>.block-main-container .bullet-container .bullet,
